components/janitor-bot/tests/snapshots/integration__check_run__mirror-pending.snap
---
source: tests/integration.rs
expression: snapshot
---
response:
  - action_groups:
      - actions:
          - set_commit_status
        ran: true
    dry_run: false
    name: mirror-commit-status
external_requests:
  - method: POST
    path: /api/v1/repos/anurag/k8s/statuses/fed9876543210abc
    body:
      context: GitHub Actions / build
      description: ""
      state: pending
      target_url: "https://github.com/Accurate0/inf-k8s/actions/runs/101"
    service: forgejo
