components/janitor-bot/tests/snapshots/integration__check_run__mirror-skip-renovate.snap
---
source: tests/integration.rs
expression: snapshot
---
response: []
external_requests:
  - method: GET
    path: /repos/Accurate0/inf-k8s/actions/runs/789
    service: github
  - method: GET
    path: /repos/Accurate0/inf-k8s/actions/runs/789
    service: github
